--- a/Seminararbeit_RSA.tex
+++ b/Seminararbeit_RSA.tex
@@ -45,11 +45,11 @@
     % TODO  Nach Moderne Verfahren der Kryptographie (natürlich mit citetitle o.ä)
     % IDEA PIN-Persönliche Identifikationsnummer
     \subsubsection{Geheimhaltung}
-    Der wohl bekannteste und offensichtlichste Verwendungszweck der Verschlüsselung ist eine Nachricht geheim zu halten. Hierbei wird die zu übertragende Nachricht so entstellt, dass sie für jeden völlig unsinnig erscheint, außer für den beabsichtigten Empfänger, welcher den geeigneten Schlüssel besitzt, er ihm das Dechiffrieren ermöglicht.\footcite{beutelspacher2015}
+    Der wohl bekannteste und offensichtlichste Verwendungszweck der Verschlüsselung ist eine Nachricht geheim zu halten. Hierbei wird die zu übertragende Nachricht so entstellt, dass sie für jeden völlig unsinnig erscheint, außer für den beabsichtigten Empfänger, welcher den geeigneten Schlüssel besitzt, er ihm das Dechiffrieren ermöglicht.\footcite[17]{beutelspacher2015}
     \subsubsection{Authentikation}
     Bei der Authentikation liegt das Ziel darin, die Echtheit einer Identität oder Nachricht zu überprüfen, da wir uns in der digitalen Welt nicht einfach durch unser Aussehen oder unsere Stimme ausweisen können und auch bei Nachrichten ist nicht zweifelsfrei Festzustellen von wem sie versendet hat und ob sie auf ihrem Weg verändert wurden. Zur \emph{Teilnehmerauthentikation} gehört unter anderem das eingeben der Geheimzahl am Geldautomaten, da nur der Besitzer der EC-Karte auch die dazu gehörige Nummer kennt und so seine Identität dem Geldautomaten nachweisen kann. Hier gilt das Prinzip:
     \begin{quote}
-        Ich weise meine Identität dadurch nach, dass ich nachweise, etwas zu haben, was kein anderer hat.\footcite{beutelspacher2015}
+        Ich weise meine Identität dadurch nach, dass ich nachweise, etwas zu haben, was kein anderer hat.\footcite[19]{beutelspacher2015}
     \end{quote}
     Ähnlich funktioniert es bei der \emph{Nachrichtenauthentikation}: hier verknüpft der Ersteller sein \enquote{Geheimnis} mit dem Dokument um es authentisch zu machen. Im Falle des Bankautomaten, muss allerdings zusätzlich zum Kontoinhaber logischerweise auch der Bankautomat die Geheimnummer kennen. Es gibt aber auch sogenannte \emph{Signaturverfahren}, bei denen dies nicht notwendig ist.
     \subsubsection{weitere Ziele}
@@ -105,7 +105,7 @@
         \begin{quote}
             [Diese] wurden 1976 von von \emph{W. Diffie} und \emph{M. Hellman} eingeführt. Jeder Benutzer eines solchen Systems hat einen öffentlichen und einen privaten Schlüssel. Damit besitzt jeder Benutzer \emph{A} eine \emph{öffentliche} Chiffriertransformation $E_A$ und eine \emph{private} Dechiffriertransformation $D_A$.\footcite[67]{watjen2008}
         \end{quote} %FIXME anführungszeichen in Blockzitaten?
-        Durch diese Form der \emph{asymmetrischen} Verschlüsselung wird das Problem der Schlüsselübertragung behoben, da der zur Verschlüsselung der Nachricht notwendige Schlüssel öffentlich zugänglich ist, die Nachricht jedoch nur mit dem geheimen privaten Schlüssel wieder lesbar gemacht werden kann. Zusätzlich ermöglicht sie durch das Wegfallen des gegenseitigen Schlüsselaustausches auch die verschlüsselte Kommunikation mit jedem beliebigen Partner, ohne die moderner Nachrichtenaustausch durch \enquote{E-Mails} oder \enquote{Instant-Messenger} undenkbar wären.\footcite[Vgl.][21]{ertel2003} Ähnlich zum \emph{asymmetrischen Algorithmus} gilt hier:
+        Durch diese Form der \emph{asymmetrischen} Verschlüsselung wird das Problem der Schlüsselübertragung behoben, da der zur Verschlüsselung der Nachricht notwendige Schlüssel öffentlich zugänglich ist, die Nachricht jedoch nur mit dem geheimen privaten Schlüssel wieder lesbar gemacht werden kann. Zusätzlich ermöglicht sie durch das Wegfallen des gegenseitigen Schlüsselaustausches auch die verschlüsselte Kommunikation mit jedem beliebigen Partner, ohne die moderner Nachrichtenaustausch durch \enquote{E-Mails} oder \enquote{Instant-Messenger} undenkbar wären.\footcite[vgl.][21]{ertel2003} Ähnlich zum \emph{asymmetrischen Algorithmus} gilt hier:
 
         \begin{align}
             E_{P_A}(M) &= C \\
@@ -113,7 +113,7 @@
             D_{S_A}\left(E_{P_A}(M)\right) &= M
         \end{align}
 
-        Wobei $P_A$ für den öffentlichen Schlüssel (public key) des Teilnehmers $A$ und $S_A$ für den privaten (secret key) steht.\footcite[Vgl.][21f.]{ertel2003}\\
+        Wobei $P_A$ für den öffentlichen Schlüssel (public key) des Teilnehmers $A$ und $S_A$ für den privaten (secret key) steht.\footcite[vgl.][21f.]{ertel2003}\\
         Beispielhaft wäre damit der Ablauf einer Nachrichtenübertrag folgender:
         \begin{quote}
             Alice ($A$) möchte an Bob ($B$) eine private Nachricht $M$ schicken. Alice kennt Bobs[\footnote{\enquote{\enquote*{Alice} und \enquote*{Bob} als Kommunikationspartner sind Bestandteil der kryptographischen Fachsprache.} \cite[21]{ertel2003}}] öffentlichen Schlüssel und damit $E_B$. Alice bildet den Chiffretext $C = E_B(M)$ und sendet ihn Bob. Nur Bob kennt die Dechiffriertransformation $D_B$, und nur er kann damit den Text durch
@@ -126,43 +126,43 @@
             \input{./content/pkflow.tex}\\
             \emph{Veranschaulichung des Public-Key-Verfahrens\footcite[67]{watjen2008}}\\            
         \end{center}
-        Um die Geheimhaltung zu gewährleisten muss das eingesetzte Verfahren so konzipiert sein, dass von dem öffentlichen Schlüssel $P$ keine Rückschlüsse auf den privaten Schlüssel $S$ gezogen werden können.\footcite[49]{beutelspacher2015} %FIXME Seitenumbruch %IDEA Authentikation schon hier?
+        Um die Geheimhaltung zu gewährleisten muss das eingesetzte Verfahren so konzipiert sein, dass von dem öffentlichen Schlüssel $P$ keine Rückschlüsse auf den privaten Schlüssel $S$ gezogen werden können.\footcite[33]{beutelspacher2015} %FIXME Seitenumbruch %IDEA Authentikation schon hier?
     
     \section{Entwicklung des RSA-Algorithmus}
-        Das bis heute wichtigste Public-Key-Kryptosystem\footcite[Vgl.][26]{pieprzyk2010topics} \enquote{wurde 1978 von \emph{R. \textbf{R}ivest},\\ \emph{A. \textbf{S}hamir} und \emph{L. \textbf{A}dleman} erfunden, als sie zu zeigen versuchten, dass Public-Key-Kryptographie unmöglich sei.}\footcite[77]{beutelspacher2015} Dabei war \emph{Rivest} für die Entwicklung des Algorithmus und \emph{Shamir} für die Überprüfung auf Schwachstellen zuständig, während \emph{Adelman} auf beiden Seiten mitwirkte.\footcite[77]{ertel2003} Sie waren jedoch nicht die ersten, denn \enquote{Ende 1997 [wurde bekannt], dass \emph{Clifford Cocks} von den britischen Government Communications Headquarters (GCHQ) bereits 1975 dieselbe Idee hatte, sie aber strenger Geheimhaltung unterlag.}\footcite[71]{watjen2008}%FIXME Zeilenumbruch
+        Das bis heute wichtigste Public-Key-Kryptosystem\footcite[vgl.][26]{pieprzyk2010topics} \enquote{wurde 1978 von \emph{R. \textbf{R}ivest},\\ \emph{A. \textbf{S}hamir} und \emph{L. \textbf{A}dleman} erfunden, als sie zu zeigen versuchten, dass Public-Key-Kryptographie unmöglich sei.}\footcite[43]{beutelspacher2015} Dabei war \emph{Rivest} für die Entwicklung des Algorithmus und \emph{Shamir} für die Überprüfung auf Schwachstellen zuständig, während \emph{Adelman} auf beiden Seiten mitwirkte.\footcite[77]{ertel2003} Sie waren jedoch nicht die ersten, denn \enquote{Ende 1997 [wurde bekannt], dass \emph{Clifford Cocks} von den britischen Government Communications Headquarters (GCHQ) bereits 1975 dieselbe Idee hatte, sie aber strenger Geheimhaltung unterlag.}\footcite[71]{watjen2008}%FIXME Zeilenumbruch
     
     \section{Schlüsselerzeugung}
-        Um die bei einem \emph{asymmetrischen Verschlüsselungsverfahren} nötigen beiden Schlüssel zu erzeugen müssen zuerst zwei unterschiedliche Primzahlen $p$ und $q$ erzeugt werden.(Vgl. \cite[278]{dankmeier2006}) Aus diesen wird dann das Produkt $n=p\cdot q$, den \emph{Modul}, gebildet. Für die Funktionalität des Verfahrens spielt die größe der verwendeten Primzahlen keine Rolle, allerdings sinkt mit steigender Größe die Gefahr des \enquote{Aufbrechens} durch einen Unbefugten, da die Sicherheit der RSA-Verschlüsselung auf dem \emph{Faktorisierungsproblem} beruht. Dies ist \enquote{das bisher ungelöste Problem der schnellen Zerlegung großer Zahlen in ihre Primfaktoren, die Aufgabe hat eine exponentielle Komplexität.}\footcite[279]{dankmeier2006} Dadurch ist es bei den heute verwendten 100- bis 350-stelligen mit aktuellen Methoden und Rechenleistung nicht möglich aus $n$ die zugrundeliegenden Primzahlen $p$ und $q$ zu berechnen. %TODO möglichkeiten um große Primzahlen zu erstellen im nachfolgenden Kapitel, warum überhaupt Primzahlen?
+        Um die bei einem \emph{asymmetrischen Verschlüsselungsverfahren} nötigen beiden Schlüssel zu erzeugen müssen zuerst zwei unterschiedliche Primzahlen $p$ und $q$ erzeugt werden.(vgl. \cite[278]{dankmeier2006}) Aus diesen wird dann das Produkt $n=p\cdot q$, den \emph{Modul}, gebildet. Für die Funktionalität des Verfahrens spielt die größe der verwendeten Primzahlen keine Rolle, allerdings sinkt mit steigender Größe die Gefahr des \enquote{Aufbrechens} durch einen Unbefugten, da die Sicherheit der RSA-Verschlüsselung auf dem \emph{Faktorisierungsproblem} beruht. Dies ist \enquote{das bisher ungelöste Problem der schnellen Zerlegung großer Zahlen in ihre Primfaktoren, die Aufgabe hat eine exponentielle Komplexität.}\footcite[279]{dankmeier2006} Dadurch ist es bei den heute verwendten 100- bis 350-stelligen mit aktuellen Methoden und Rechenleistung nicht möglich aus $n$ die zugrundeliegenden Primzahlen $p$ und $q$ zu berechnen. %TODO möglichkeiten um große Primzahlen zu erstellen im nachfolgenden Kapitel, warum überhaupt Primzahlen?
         Zusätzlich zu $n$ muss auch noch die \emph{Eulersche Phi-Funktion} von $n$ gebildet werden.
         \subsection{Eulersche Phi-Funktion}
-            Die Eulersche $\varphi$-Funktion $\varphi(n)$ bezeichnet die Menge der zu $n$ \emph{teilerfremden} Zahlen $a$ von $1$ bis $n-1$.\footcite[Vgl.][111]{swoboda2008kryptographie}
+            Die Eulersche $\varphi$-Funktion $\varphi(n)$ bezeichnet die Menge der zu $n$ \emph{teilerfremden} Zahlen $a$ von $1$ bis $n-1$.\footcite[vgl.][111]{swoboda2008kryptographie}
             \begin{equation}
                 \varphi(n)= |\{a\in \left[ 1, n-1 \right] | \ggt(n, a)=1\}|
             \end{equation}
             \enquote{Da alle Primzahlen $p$ nur durch 1 und sich selbst teilbar sind, sind sie sicher zu den Zahlen 1 bis $p-1$ teilerfremd, daher ist $\varphi(p) = p-1$.}\footcite{steinfeld}
-            Da $n$ das Produkt zweier verschiedener Primzahlen und somit teilerfremder natürlicher Zahlen ist, gilt die \emph{Multiplikativität}\footcite[Vgl.][]{steinfeld}:
+            Da $n$ das Produkt zweier verschiedener Primzahlen und somit teilerfremder natürlicher Zahlen ist, gilt die \emph{Multiplikativität}\footcite[vgl.][]{steinfeld}:
             \begin{equation}
                 \varphi(n) = \varphi(pq) = \varphi(p)\cdot\varphi(q)
             \end{equation}
-            Für $\varphi(p) = p-1$ und $\varphi(q) = q-1$ ergibt sich also\footcite[Vgl.][279]{dankmeier2006}:
+            Für $\varphi(p) = p-1$ und $\varphi(q) = q-1$ ergibt sich also\footcite[vgl.][279]{dankmeier2006}:
             \begin{equation}
                 \varphi(n) = (p-1)\cdot(q-1)
             \end{equation}
         \subsection{Das modulare Inverse} %TODO #6 noch ausführlicher (wat40 & dank44) & ind. Zitat
-            \enquote{Des weiteren [wird] eine zu $\varphi(n)$ teilerfremde Zufallszahl $e$ [($1<e<\varphi(n)$)]\footcite[71]{watjen2008} [gewählt] und [...] hierzu die \emph{modulare inverse} Zahl $d$ bezüglich $\varphi(n)$ [berechnet]. Für $d$ gilt:}\footcite[279]{beutelspacher2015}
+            \enquote{Des weiteren [wird] eine zu $\varphi(n)$ teilerfremde Zufallszahl $e$ [($1<e<\varphi(n)$)]\footcite[71]{watjen2008} [gewählt] und [...] hierzu die \emph{modulare inverse} Zahl $d$ bezüglich $\varphi(n)$ [berechnet]. Für $d$ gilt:}\footcite[279]{dankmeier2006}
             \begin{equation}
                 d\cdot e\mod{\varphi(n)} = 1 \label{eq:modinv}
             \end{equation}
-            Da $e$ und $\varphi(n)$ teilerfremd sind, gibt es hierfür eine Lösung\footcite[Vgl.][77, 164]{ertel2003}. Dieses
+            Da $e$ und $\varphi(n)$ teilerfremd sind, gibt es hierfür eine Lösung\footcite[vgl.][77, 164]{ertel2003}. Dieses
             \enquote{$d$ kann berechnet werden mit dem \emph{erweiterten Euklidischen Algorithmus}.}\footcite[77]{ertel2003}
 
         \subsubsection{Der erweiterte Euklidische Algorithmus}
-            Der erweiterte Euklidische Algorithmus baut auf dem \enquote{normalen} Euklidischen Algorithmus auf, mit dem der größte gemeinsame Teiler zweier Zahlen $a$ und $b$ auf.\footcite[Vgl.][]{erweA} Dabei wird $a$ durch $b$ dividiert und darauffolgend mit dem Rest (Modulo) wiederum der Divisor dividiert. Dies wird solange wiederholt bis der Rest gleich $0$ ist.\footcite[Vgl.][]{matbib-eka}
+            Der erweiterte Euklidische Algorithmus baut auf dem \enquote{normalen} Euklidischen Algorithmus auf, mit dem der größte gemeinsame Teiler zweier Zahlen $a$ und $b$ auf.\footcite[vgl.][]{erweA} Dabei wird $a$ durch $b$ dividiert und darauffolgend mit dem Rest (Modulo) wiederum der Divisor dividiert. Dies wird solange wiederholt bis der Rest gleich $0$ ist.\footcite[vgl.][]{matbib-eka}
             \begin{center}
             \input{./content/EukAlg.tex}\\
             \emph{Ablaufschema des Euklidischen Algorithmus}\footcite{zum2020}\\                   
             \end{center}
-            Nach vollständigem Iterieren dieses Ablaufs ergeben sich neben dem ggT auch ein Reihe von Gleichungen (Abbildung \ref{fig:euklid}) (Vgl. \cite{erweA}). Um damit auf das modulare Inverse zu finden müssen diese nun, bei der letzten beginnend, nach dem jeweiligen Rest aufgelöst und ineinander eingesetzt werden. Mit $a=5$ und $b=48$ würde das folgende Rechnungen ergeben (Abbildung \ref{fig:erweuklid}):\\
+            Nach vollständigem Iterieren dieses Ablaufs ergeben sich neben dem ggT auch ein Reihe von Gleichungen (Abbildung \ref{fig:euklid}) (vgl. \cite{erweA}). Um damit auf das modulare Inverse zu finden müssen diese nun, bei der letzten beginnend, nach dem jeweiligen Rest aufgelöst und ineinander eingesetzt werden. Mit $a=5$ und $b=48$ würde das folgende Rechnungen ergeben (Abbildung \ref{fig:erweuklid}):\\
             \begin{figure}[h!]
                 \centering
                 \includegraphics{content/euklid.png}
@@ -193,7 +193,7 @@
 
 
         \subsection{Die Schlüssel}
-            Mit diesen berechneten Zahlen können nun die Schlüssel erstellt werden(Vgl. \cite[77]{ertel2003}):
+            Mit diesen berechneten Zahlen können nun die Schlüssel erstellt werden(vgl. \cite[77]{ertel2003}):
             \begin{description}
                 \item[Der öffentliche Schlüssel ($P$)] besteht aus dem Paar $P=(e, n)$ und wird allen Personen, von denen der Besitzer Informationen erhalten will, zugänglich gemacht. Hier wird auch erkenntlich, weshalb es so wichtig ist, dass $n$ nicht leicht in seine Primfaktoren zerlegt werden kann, denn wenn es einem Angreifer gelingen sollte diese ausfindig zu machen könnte er damit den \emph{privaten Schlüssel} berechnen und alle (abgefangenen) Nachrichten zu entschlüsseln.
                 \item[Der geheime Schlüssel ($S$)] wetzt sich aus $S=(d, n)$ zusammen und sollte nur dem Besitzer bekannt sein. 
@@ -201,7 +201,7 @@
             Da die Schlüsselerzeugung meist von einer Schlüsselvergabestelle, wie z.B. dem Anbieter Sofortnachrichtendienstes, sollte dieser nach Berechnung der Schlüssel die Primzahlen $p$ und $q$, sowie das Ergebnis der zugehörigen Eulerfunktion $\varphi(n)$ löschen, damit auch im Falle einer Kompromittierung der Server dessen die Privatsphäre der Nutzer geschützt ist.\footcite[279]{dankmeier2006} %CHECK Grammatik "Server dessen" oder Bezug auf Vergabestelle? %TODO Ablaufschema: Cryptool oder tikz
 
     \section{Ver- und Entschlüsselungs Algorithmus}
-            Möchte Bob nun eine chiffrierte Nachricht an Alice verschicken, muss er folgendermaßen vorgehen (Vgl. \cite[71]{watjen2008}):
+            Möchte Bob nun eine chiffrierte Nachricht an Alice verschicken, muss er folgendermaßen vorgehen (vgl. \cite[71]{watjen2008}):
             \begin{enumerate}
                 \item Bob beschafft sich den öffentlichen Schlüssel $P$ von Alice
                 \item Da die Buchstaben seiner Nachricht nicht direkt verschlüsselt werden, muss er sie in Zahlen übersetzen, die in $\mathbb{Z}_n$ enthalten sein müssen. %CHECK was ist Zn
@@ -234,10 +234,9 @@
 
     %TODO Beispiel
     %TODO Algorithmus in Terminologie einbinden
-    %FIXME beutelspacher Zitate Seiten überprüfen
 
     \section{Digitale Signatur} %FIXME Kürzen
-        Neben dem Verschlüsseln von Nachrichten wird das RSA-Verfahren auch häufig dazu verwendet um digitale Nachrichten zu signieren. Bei einer \emph{digitalen Signatur}, oft auch \emph{elektronische Unterschrift} \enquote{unterschreibt} ein Teilnehmer $A$ seine Nachricht oder Datei indem er eine nur ihm bekannten \emph{Signaturfunktion} $s_A$ auf diese anwendet (Vgl. \cite[40-43]{beutelspacher2015}). Neben der geheimen Signaturfunktion besitzt jeder Teilnehmer auch noch eine \emph{Verifikationsfunktion} $v_A$, welche er öffentlich zugänglich macht oder zusätzlich mit einer signierten und einer unsignierten Version der Nachricht mitversendet. Mit dieser kann der Empfänger die signierte Nachricht entschlüsseln und falls sich der dechiffrierte Text mit dem unsignierten deckt, ist die Identität des Absenders bewiesen, da nur der Besitzer des privaten Schlüssel den Text so verschlüsseln konnte, dass der Chiffretext sich nach Anwendung der öffentlichen Verifikationsfunktion dem Klartext entspricht\footcite[Vgl.][68]{watjen2008}.
+        Neben dem Verschlüsseln von Nachrichten wird das RSA-Verfahren auch häufig dazu verwendet um digitale Nachrichten zu signieren. Bei einer \emph{digitalen Signatur}, oft auch \emph{elektronische Unterschrift} \enquote{unterschreibt} ein Teilnehmer $A$ seine Nachricht oder Datei indem er eine nur ihm bekannten \emph{Signaturfunktion} $s_A$ auf diese anwendet (vgl. \cite[40-43]{beutelspacher2015}). Neben der geheimen Signaturfunktion besitzt jeder Teilnehmer auch noch eine \emph{Verifikationsfunktion} $v_A$, welche er öffentlich zugänglich macht oder zusätzlich mit einer signierten und einer unsignierten Version der Nachricht mitversendet. Mit dieser kann der Empfänger die signierte Nachricht entschlüsseln und falls sich der dechiffrierte Text mit dem unsignierten deckt, ist die Identität des Absenders bewiesen, da nur der Besitzer des privaten Schlüssel den Text so verschlüsseln konnte, dass der Chiffretext sich nach Anwendung der öffentlichen Verifikationsfunktion dem Klartext entspricht\footcite[vgl.][68]{watjen2008}.
         % TODO Ablaufschema
         \begin{align}
             SIG &= s_A(M) \\
@@ -255,7 +254,7 @@
         % TODO Geheimhaltung und Signatur in einem
 
     \section{Mathematischer Beweis des Verfahrens}
-        Um den RSA-Algorithmus mathematisch zu beweisen, muss bestätigt werden, dass die Funktionen E \ref{eq:encryption} und D \ref{eq:decrytion} invers zueinander sind und für alle $M\in\mathbb{Z}_n$ gilt:\footcite[Vgl.][78]{ertel2003}
+        Um den RSA-Algorithmus mathematisch zu beweisen, muss bestätigt werden, dass die Funktionen E \ref{eq:encryption} und D \ref{eq:decrytion} invers zueinander sind und für alle $M\in\mathbb{Z}_n$ gilt:\footcite[vgl.][78]{ertel2003}
         \begin{equation}
             D(E(M)) = E(D(M)) = M
         \end{equation}
@@ -264,11 +263,11 @@
             \left(M^{e}\mod{n}\right)^{d}\mod{n} = K^{ed}\mod{n} \label{eq:ked}
         \end{equation}
         (Eine kurze Erklärung der verwendten Rechenregeln lässt sich hier finden: \cite{modpot})
-        Da das modulare Inverse $d$ in \ref{eq:modinv} als $ed\mod{\varphi(n)}=1$ bestimmt wurde, gilt nach Einführung des ganzzahligen Faktors $k$:\footcite[Vgl.][72]{watjen2008}
+        Da das modulare Inverse $d$ in \ref{eq:modinv} als $ed\mod{\varphi(n)}=1$ bestimmt wurde, gilt nach Einführung des ganzzahligen Faktors $k$:\footcite[vgl.][72]{watjen2008}
         \begin{equation}
             e\cdot d = k\cdot \varphi(n)+1
         \end{equation}
-        Zusammen mit \ref{eq:ked} resultiert das in folgender Gleichung, die es zu beweisen gilt:\footcite[Vgl.][282]{dankmeier2006}
+        Zusammen mit \ref{eq:ked} resultiert das in folgender Gleichung, die es zu beweisen gilt:\footcite[vgl.][282]{dankmeier2006}
         \begin{equation}
            M = M^{k\varphi(n)+1}\mod{n} = M\cdot M^{k\varphi(n)}\mod{n}
         \end{equation}
@@ -290,15 +289,15 @@
         Für den Randfall, dass $M$ nicht teilerfremd zu $n$ ist, sondern ein Vielfaches von $q$ oder $p$ ist, ist ebenfalls ein Beweis vorhanden, diesen hier aufzuführen würde jedoch den Rahmen sprengen, es soll jedoch gesagt werden, dass er teilweise auf dem eben beschriebenen Vorgehen basiert.
         
     \section{Bewertung} \label{sec:bewertung}
-        Die größte Vorteil des RSA-Verfahrens ist wie bei Public-Key-Kryptosystemen allgemein die Einfachheit der Schlüsselverteilung, welche es für viele Anwendungen überhaupt erst brauchbar macht (Vgl.\cite[285]{dankmeier2006}). Ein weiterer positiver Punkt im Bezug auf die Schlüssel ist, dass hier im Gegensatz zu manch anderen Verfahren diese für jeden Teilnehmer nur einmalig generiert werden müssen, was insbesondere in Anbetracht der relativ hohen Rechenintensität der Primzahlgenerierung wichtig ist. Auch die Möglichkeit der Signatur mit den gleichen wie zur Verschlüsselung genutzten Schlüsseln und Funktionen trägt zur großen Anerkennung bei. Wie bereits erwähnt basiert die Sicherheit auf dem \emph{Faktorisierungsproblem}. Da dieses Problem jedoch mit neuen Algorithmen und schnelleren Rechnern immer schneller zu lösen ist, sinkt die Sicherheit. Dieses Problem kann jedoch einfach mit längeren Schlüsseln gelöst werden, was allerdings zu höheren Ansprüchen von Rechenleistung bei der Benutzung mit sich bringt.\footcite[Vgl.][]{zum2020} So veröffentlichte \emph{Rivest} 1977 einen mit einer 129 Dezimalstellen langen Zahl $n$ verschlüsselte Text, für den er annahm, dass es 40 Quadrillionen Jahre benötige um diesen zu entschlüsseln. Bereits 1994 wurde er innerhalb von 8 Monaten geknackt.\footcite[Vgl.][73]{watjen2008} Zur Sicherheit durch dass \emph{Faktorisierungsproblem} gilt auch noch anzumerken, dass \enquote{Experten \emph{glauben}, dass es kein effizientes [...] Ver-
+        Die größte Vorteil des RSA-Verfahrens ist wie bei Public-Key-Kryptosystemen allgemein die Einfachheit der Schlüsselverteilung, welche es für viele Anwendungen überhaupt erst brauchbar macht (vgl.\cite[285]{dankmeier2006}). Ein weiterer positiver Punkt im Bezug auf die Schlüssel ist, dass hier im Gegensatz zu manch anderen Verfahren diese für jeden Teilnehmer nur einmalig generiert werden müssen, was insbesondere in Anbetracht der relativ hohen Rechenintensität der Primzahlgenerierung wichtig ist. Auch die Möglichkeit der Signatur mit den gleichen wie zur Verschlüsselung genutzten Schlüsseln und Funktionen trägt zur großen Anerkennung bei. Wie bereits erwähnt basiert die Sicherheit auf dem \emph{Faktorisierungsproblem}. Da dieses Problem jedoch mit neuen Algorithmen und schnelleren Rechnern immer schneller zu lösen ist, sinkt die Sicherheit. Dieses Problem kann jedoch einfach mit längeren Schlüsseln gelöst werden, was allerdings zu höheren Ansprüchen von Rechenleistung bei der Benutzung mit sich bringt.\footcite[vgl.][]{zum2020} So veröffentlichte \emph{Rivest} 1977 einen mit einer 129 Dezimalstellen langen Zahl $n$ verschlüsselte Text, für den er annahm, dass es 40 Quadrillionen Jahre benötige um diesen zu entschlüsseln. Bereits 1994 wurde er innerhalb von 8 Monaten geknackt.\footcite[vgl.][73]{watjen2008} Zur Sicherheit durch dass \emph{Faktorisierungsproblem} gilt auch noch anzumerken, dass \enquote{Experten \emph{glauben}, dass es kein effizientes [...] Ver-
         fahren zur Faktorisierung gibt. Bewiesen ist dies jedoch \emph{nicht}.}\footcite[80]{ertel2003}
 
     \section{praktische Anwendungen}
-        Die meisten von uns kommen mit der RSA-Verschlüsselung mehrmals tagtäglich in Berührung, meist ohne es überhaupt zu bemerken. Denn sobald man eine Seite im Internet, deren URL mit \enquote{https} beginnt, nutzt man sie (Vgl. \cite{httpsblog}). Das \emph{HyperText Transfer Protocol (http)} existiert seit dem Beginn des Internets 1990, die Daten wurden hierbei jedoch als Klartext übertragen, weshalb 1994 das \emph{Hypertext Transfer Protocol Secure (https)} eingeführt wurde. Einem genauen Beobachter ist vielleicht schonmal am linken Rand der Adressleiste seines Browsers ein Symbol aufgefallen, welches je nach Verwendung von \emph{http} oder \emph{https} ein Schloss oder ein Warndreieck darstellt, denn nur bei \emph{https} sind die übertragenen Daten verschlüsselt. Verwendet wird hierfür das \emph{Transport Layer Security (TLS)} Protokoll, einer Mischung aus RSA und einem symmetrischen Verschlüsselungsverfahren, AES. Dabei erzeugt der Browser einen \emph{Session-Key} und übermittelt diesen, mit dem \emph{Public-Key} des Webservers verschlüsselt an ebendiesen. Sobald der Server den \emph{Session-Key} erhalten hat, findet der Datenaustausch durch \emph{AES} verschlüsselt statt, da dies wesentlich weniger Rechenleistung benötigt als wenn alles mit \emph{RSA} verschlüsselt werden würde.
-        Für Nutzer, die sich selbst etwas stärker damit befassen wollen können sie mit Software wie \textbf{PGP} (Pretty-Good-Privacy) ihre eigenen Dateien oder auch mit dem kostenlosen Ableger \textbf{OpenPGP} ihre EMails verschlüsseln und signieren.\footcite[Vgl.][]{zotero-48}
+        Die meisten von uns kommen mit der RSA-Verschlüsselung mehrmals tagtäglich in Berührung, meist ohne es überhaupt zu bemerken. Denn sobald man eine Seite im Internet, deren URL mit \enquote{https} beginnt, nutzt man sie (vgl. \cite{httpsblog}). Das \emph{HyperText Transfer Protocol (http)} existiert seit dem Beginn des Internets 1990, die Daten wurden hierbei jedoch als Klartext übertragen, weshalb 1994 das \emph{Hypertext Transfer Protocol Secure (https)} eingeführt wurde. Einem genauen Beobachter ist vielleicht schonmal am linken Rand der Adressleiste seines Browsers ein Symbol aufgefallen, welches je nach Verwendung von \emph{http} oder \emph{https} ein Schloss oder ein Warndreieck darstellt, denn nur bei \emph{https} sind die übertragenen Daten verschlüsselt. Verwendet wird hierfür das \emph{Transport Layer Security (TLS)} Protokoll, einer Mischung aus RSA und einem symmetrischen Verschlüsselungsverfahren, AES. Dabei erzeugt der Browser einen \emph{Session-Key} und übermittelt diesen, mit dem \emph{Public-Key} des Webservers verschlüsselt an ebendiesen. Sobald der Server den \emph{Session-Key} erhalten hat, findet der Datenaustausch durch \emph{AES} verschlüsselt statt, da dies wesentlich weniger Rechenleistung benötigt als wenn alles mit \emph{RSA} verschlüsselt werden würde.
+        Für Nutzer, die sich selbst etwas stärker damit befassen wollen können sie mit Software wie \textbf{PGP} (Pretty-Good-Privacy) ihre eigenen Dateien oder auch mit dem kostenlosen Ableger \textbf{OpenPGP} ihre EMails verschlüsseln und signieren.\footcite[vgl.][]{zotero-48}
         
     \section{Ausblick}
-        Auch wenn das RSA-Verfahren heutzutage zu den sichersten Verschlüsselungen zählt und sich großer Beliebtheit erfreut, ist das keine Garantie, dass die heute mittels RSA verschlüsselten Daten morgen noch immer genauso sicher sind. Wie in \ref{sec:bewertung} bereits erwähnt ist es nämlich nicht bewiesen, dass es keinen einfachen und schnellen Weg gibt, das Faktorisierungsproblem zu lösen und wenn es einem genialen Mathematiker gelingt diesen zu finden, ist die Sicherheit schlagartig erloschen. Eine weitere Entwicklung, die für die Kryptographie dramatische Folgen haben könnte ist die Forschung im Bereich der Quantencomputer. Im Gegensatz zu herkömmlichen Prozessoren sind Quantenprozessoren nämlich ideal dafür geeignet Probleme wie die Faktorisierung zu lösen.\footcite[Vgl.][]{wiedmann} Auch wenn diese noch in den Kinderschuhen stecken, ist es schon jetzt nötig an Quantencomputer-sicheren Verschlüsselungsalgorithmen zu arbeiten um auch in Zukunft unsere Privatsphäre schützen zu können. Im Moment gilt aber immer noch, dass die RSA-Verschlüsselung eine geniale Möglichkeit ist den Schutz wichtiger Daten zu garantieren
+        Auch wenn das RSA-Verfahren heutzutage zu den sichersten Verschlüsselungen zählt und sich großer Beliebtheit erfreut, ist das keine Garantie, dass die heute mittels RSA verschlüsselten Daten morgen noch immer genauso sicher sind. Wie in \ref{sec:bewertung} bereits erwähnt ist es nämlich nicht bewiesen, dass es keinen einfachen und schnellen Weg gibt, das Faktorisierungsproblem zu lösen und wenn es einem genialen Mathematiker gelingt diesen zu finden, ist die Sicherheit schlagartig erloschen. Eine weitere Entwicklung, die für die Kryptographie dramatische Folgen haben könnte ist die Forschung im Bereich der Quantencomputer. Im Gegensatz zu herkömmlichen Prozessoren sind Quantenprozessoren nämlich ideal dafür geeignet Probleme wie die Faktorisierung zu lösen.\footcite[vgl.][]{wiedmann} Auch wenn diese noch in den Kinderschuhen stecken, ist es schon jetzt nötig an Quantencomputer-sicheren Verschlüsselungsalgorithmen zu arbeiten um auch in Zukunft unsere Privatsphäre schützen zu können. Im Moment gilt aber immer noch, dass die RSA-Verschlüsselung eine geniale Möglichkeit ist den Schutz wichtiger Daten zu garantieren
 
     \newpage
     \printbibliography
